--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -5572,7 +5572,7 @@ input[class*='chckBxAlign'] {
 }
 
 .form-horizontal .control-label {
-    width: auto !important;
+   /* width: auto !important;*/
     /*padding-right: 10px;*/
 }
 
@@ -5865,9 +5865,6 @@ color: #313131;
 	text-decoration:none;
 }
 
-
-
-
 #formCreateProject .content_adder .control-group {
 	width: 45%;
 	margin: auto;
@@ -5924,6 +5921,12 @@ color: #313131;
 .zebra-striped thead tr th div {
 	color: white !important;
 }
+.mfbox .header-background {
+	color: black !important;
+}
+.mfbox .header-background tr th {
+	border: none;
+}
 
 /* minification */
 .compressJs_Div {
@@ -5960,4 +5963,12 @@ color: #313131;
 .compressNameTextBox {
 	float: left !important;
  	width: 178px !important;
+}
+
+/*features page select box*/
+.dd-selected, .dd-option {
+	padding: 0px !important;
+}
+.dd-selected-image .dd-option-image {
+	margin: 10px 10px 10px 0px !important;
 }
